--- a/.github/workflows/install-xray.yml
+++ b/.github/workflows/install-xray.yml
@@ -1,10 +1,10 @@
 name: Install Xray and Run update_sub
 
 on:
-  push:
-    branches: [ main ]
-  workflow_dispatch:
-
+  schedule:
+    - cron: '0 0 * * *'  # 每天 UTC 00:00（北京时间 08:00）
+  workflow_dispatch:  # 手动触发
+  
 jobs:
   install-xray:
     runs-on: ubuntu-latest
